@@ -10,14 +10,15 @@ import abbot.script.parsers.Parser;
 import abbot.tester.ComponentTester;
 import java.awt.Component;
 import java.lang.reflect.Array;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 
 /**
- * Provide parsing of a String into an array of appropriately typed arguments.   Arrays are indicated by square
- * brackets, and arguments are separated by commas, e.g.<br>
+ * Provide parsing of a String into an array of appropriately typed arguments.   Arrays are
+ * indicated by square brackets, and arguments are separated by commas, e.g.<br>
  * <ul>
  * <li>An empty String array (length zero): "[]"
  * <li>Three arguments "one,two,three"
@@ -27,10 +28,11 @@ import java.util.Map;
  * <li>An array of two strings: "[one,two]"
  * <li>Commas must be escaped when they would otherwise be interpreted as an
  * argument separator:<br>
- * "one,two%2ctwo,three" (2nd argument is "two,two")
+ * "one,two%2ctwo,three" (the 2nd argument is "two,two")
  * </ul>
  */
 public class ArgumentParser {
+
   private ArgumentParser() {}
 
   private static final String ESC_ESC_COMMA = "%%2C";
@@ -41,42 +43,42 @@ public class ArgumentParser {
   /**
    * Maps class names to their corresponding string parsers.
    */
-  private static final Map parsers = new HashMap();
+  private static final Map<Class<?>, Parser> parsers = new HashMap<>();
 
   private static boolean isExtension(String name) {
-    return name.indexOf(".extensions.") != -1;
+    return name.contains(".extensions.");
   }
 
-  private static Parser findParser(String name, Class targetClass) {
+  private static Parser findParser(String name, Class<?> targetClass) {
     Log.debug("Trying " + name + " for " + targetClass);
     try {
-      Class cvtClass =
+      Class<?> cvtClass =
           isExtension(name)
               ? Class.forName(name, true, targetClass.getClassLoader())
               : Class.forName(name);
-      Parser parser = (Parser) cvtClass.newInstance();
-      if (cvtClass.getName().indexOf(".extensions.") == -1) {
+      Parser parser = (Parser) cvtClass.getDeclaredConstructor().newInstance();
+      if (!cvtClass.getName().contains(".extensions.")) {
         parsers.put(targetClass, parser);
       }
       return parser;
-    } catch (InstantiationException ie) {
-      Log.debug(ie);
-    } catch (IllegalAccessException iae) {
-      Log.debug(iae);
-    } catch (ClassNotFoundException cnf) {
-      Log.debug(cnf);
+    } catch (InstantiationException
+        | IllegalAccessException
+        | ClassNotFoundException
+        | NoSuchMethodException
+        | InvocationTargetException e) {
+      Log.debug(e);
     }
     return null;
   }
 
-  public static Parser setParser(Class cls, Parser parser) {
-    Parser old = (Parser) parsers.get(cls);
+  public static Parser setParser(Class<?> cls, Parser parser) {
+    Parser old = parsers.get(cls);
     parsers.put(cls, parser);
     return old;
   }
 
-  public static Parser getParser(Class cls) {
-    Parser parser = (Parser) parsers.get(cls);
+  public static Parser getParser(Class<?> cls) {
+    Parser parser = parsers.get(cls);
     // Load core testers with the current framework's class loader
     // context, and anything else in the context of the code under test
     if (parser == null) {
@@ -105,7 +107,7 @@ public class ArgumentParser {
   }
 
   public static String encodeArguments(String[] args) {
-    StringBuffer sb = new StringBuffer();
+    StringBuilder sb = new StringBuilder();
     if (args.length > 0) {
       if (isBounded(args[0])) {
         sb.append(args[0]);
@@ -124,7 +126,8 @@ public class ArgumentParser {
     return sb.toString();
   }
 
-  private static class Tokenizer extends ArrayList {
+  private static class Tokenizer extends ArrayList<String> {
+
     public Tokenizer(String input) {
       while (true) {
         int index = input.indexOf(",");
@@ -139,63 +142,63 @@ public class ArgumentParser {
   }
 
   public static String[] parseArgumentList(String encodedArgs) {
-    ArrayList alist = new ArrayList();
-    if (encodedArgs == null || "".equals(encodedArgs)) {
+    ArrayList<String> alist = new ArrayList<>();
+    if (encodedArgs == null || encodedArgs.isEmpty()) {
       return new String[0];
     }
     // handle old method of escaped commas
     encodedArgs = replace(encodedArgs, "\\,", ESC_COMMA);
-    Iterator iter = new Tokenizer(encodedArgs).iterator();
+    Iterator<String> iter = new Tokenizer(encodedArgs).iterator();
     while (iter.hasNext()) {
-      String str = (String) iter.next();
+      StringBuilder str = new StringBuilder(iter.next());
 
-      if (str.trim().startsWith("[") && !str.trim().endsWith("]")) {
+      if (str.toString().trim().startsWith("[") && !str.toString().trim().endsWith("]")) {
         while (iter.hasNext()) {
-          String next = (String) iter.next();
-          str += "," + next;
+          String next = iter.next();
+          str.append(",").append(next);
           if (next.trim().endsWith("]")) {
             break;
           }
         }
-      } else if (str.trim().startsWith("\"") && !str.trim().endsWith("\"")) {
+      } else if (str.toString().trim().startsWith("\"") && !str.toString().trim().endsWith("\"")) {
         while (iter.hasNext()) {
-          String next = (String) iter.next();
-          str += "," + next;
+          String next = iter.next();
+          str.append(",").append(next);
           if (next.trim().endsWith("\"")) {
             break;
           }
         }
-      } else if (str.trim().startsWith("'") && !str.trim().endsWith("'")) {
+      } else if (str.toString().trim().startsWith("'") && !str.toString().trim().endsWith("'")) {
         while (iter.hasNext()) {
-          String next = (String) iter.next();
-          str += "," + next;
+          String next = iter.next();
+          str.append(",").append(next);
           if (next.trim().endsWith("'")) {
             break;
           }
         }
       }
 
-      if (NULL.equals(str.trim())) {
+      if (NULL.equals(str.toString().trim())) {
         alist.add(null);
       } else {
         // If it's an array, don't unescape the commas yet
-        if (!str.startsWith("[")) {
-          str = unescapeCommas(str);
+        if (!str.toString().startsWith("[")) {
+          str = new StringBuilder(unescapeCommas(str.toString()));
         }
-        alist.add(str);
+        alist.add(str.toString());
       }
     }
-    return (String[]) alist.toArray(new String[alist.size()]);
+    return alist.toArray(new String[0]);
   }
 
   public static String substitute(Resolver resolver, String arg) {
     if (arg == null) {
-      return arg;
+      return null;
     }
 
-    int i = 0;
+    int i;
     int marker = 0;
-    StringBuffer sb = new StringBuffer();
+    StringBuilder sb = new StringBuilder();
     while ((i = arg.indexOf("${", marker)) != -1) {
       if (marker < i) {
         sb.append(arg, marker, i);
@@ -220,13 +223,13 @@ public class ArgumentParser {
     return sb.toString();
   }
 
-  public static Object eval(Resolver resolver, String arg, Class cls)
+  public static Object eval(Resolver resolver, String arg, Class<?> cls)
       throws IllegalArgumentException, NoSuchReferenceException, ComponentSearchException {
     // Perform property substitution
     arg = substitute(resolver, arg);
 
     Parser parser;
-    Object result = null;
+    Object result;
     try {
       if (arg == null || arg.equals(NULL)) {
         result = null;
@@ -268,7 +271,7 @@ public class ArgumentParser {
       } else if (cls.isArray() && arg.trim().startsWith("[")) {
         arg = arg.trim();
         String[] args = parseArgumentList(arg.substring(1, arg.length() - 1));
-        Class base = cls.getComponentType();
+        Class<?> base = cls.getComponentType();
         Object arr = Array.newInstance(base, args.length);
         for (int i = 0; i < args.length; i++) {
           Object obj = eval(resolver, args[i], base);
@@ -289,7 +292,7 @@ public class ArgumentParser {
     }
   }
 
-  public static Object[] eval(Resolver resolver, String[] args, Class[] params)
+  public static Object[] eval(Resolver resolver, String[] args, Class<?>[] params)
       throws IllegalArgumentException, NoSuchReferenceException, ComponentSearchException {
     Object[] plist = new Object[params.length];
     for (int i = 0; i < plist.length; i++) {
@@ -299,7 +302,7 @@ public class ArgumentParser {
   }
 
   public static String replace(String str, String s1, String s2) {
-    StringBuffer sb = new StringBuffer(str);
+    StringBuilder sb = new StringBuilder(str);
     int index = 0;
     while ((index = sb.toString().indexOf(s1, index)) != -1) {
       sb.delete(index, index + s1.length());
@@ -309,25 +312,26 @@ public class ArgumentParser {
     return sb.toString();
   }
 
-  // TODO: move this somewhere more appropriate; make public static, maybe
-  // in ComponentReference
-  private static Component waitForComponentAvailable(final ComponentReference ref)
+  // TODO: move this somewhere more appropriate; make public static, maybe in ComponentReference
+  private static Component waitForComponentAvailable(ComponentReference ref)
       throws ComponentSearchException {
     try {
       ComponentTester tester = ComponentTester.getTester(Component.class);
-
       tester.wait(
           new Condition() {
+            @Override
             public boolean test() {
               try {
                 ref.getComponent();
               } catch (ComponentNotFoundException e) {
                 return false;
               } catch (MultipleComponentsFoundException m) {
+                // ignore
               }
               return true;
             }
 
+            @Override
             public String toString() {
               return ref + " to become available";
             }
@@ -345,7 +349,7 @@ public class ArgumentParser {
       return NULL;
     }
     if (value.getClass().isArray()) {
-      StringBuffer sb = new StringBuffer();
+      StringBuilder sb = new StringBuilder();
       sb.append("[");
       for (int i = 0; i < Array.getLength(value); i++) {
         Object o = Array.get(value, i);
@@ -380,6 +384,7 @@ public class ArgumentParser {
         Integer.parseInt(hash, 16);
         return true;
       } catch (NumberFormatException e) {
+        // ignore
       }
     }
     return false;
